@@ -600,7 +600,8 @@ Usage    : FLORISTRY [ITEM NAME]\n\r\
 Example  : floristry some flowers\n\r\
 Without this skill, all flowers found are unknown to \
 the player, being known only as "flowers".  With this skill, the player \
-may identify the flower for the type that it is.
+may identify the flower for the type that it is. \
+The flowers for floristry are obtained by using the Foraging skill.
 
 FOODPREPPING=FOOD_PREP
 FOODPREP=FOOD_PREP
@@ -1107,6 +1108,19 @@ Fishing, but yields three times as many fish. Fishing it best done in the water.
 You can also bundle multiple resources together using this skill.  The GET command \
 can be used to unbundle such resources.
 
+MFLOR=MASTER_FLORISTRY
+MFLORISTRY=MASTER_FLORISTRY
+MASTERFLOR=MASTER_FLORISTRY
+MASTERFLORISTRY=MASTER_FLORISTRY
+MASTER_FLORISTRY=<ABILITY>\
+Usage    : MFLOR [ITEM NAME]\n\r\
+Example  : mflor some flowerss\n\r\
+Master Floristry is identical to Floristry, except that \
+it is able to identify every herb in a bundle, or in a large \
+group of herbs in the florists inventory.  Like Floristry, \
+the player may use this skill to identify flowers for the types that \
+they are.  The flowers for floristry are obtained by using the Foraging skill.
+
 MFOODPREPPING=MASTER_FOOD_PREP
 MFOODPREP=MASTER_FOOD_PREP
 MFPREP=MASTER_FOOD_PREP
@@ -1155,22 +1169,6 @@ gardening, but yields three times as many plants. \
 You can also bundle multiple resources together using this skill.  The GET command \
 can be used to unbundle such resources.
 
-MHERB=MASTER_HERBOLOGY
-MHERBOLOGY=MASTER_HERBOLOGY
-MASTERHERB=MASTER_HERBOLOGY
-MASTERHERBOLOGY=MASTER_HERBOLOGY
-MASTER_HERBOLOGY=<ABILITY>\
-Usage    : MHERB [ITEM NAME]\n\r\
-Example  : mherb some herbs\n\r\
-Master Herbology is identical to Herbology, except that \
-it is able to identify every herb in a bundle, or in a large \
-group of herbs in the herbologists inventory.  Like Herbology, \
-the player may use this skill to identify herb for the types that \
-they are.  This skill is quite necessary for Druids who wish to \
-use their Herbalism skill, or Cooks who need particular herbs \
-for recipes, but is fairly unnecessary for others. \
-The raw herbs for herbology are obtained by using the Foraging skill.
-
 MGDIG=MASTER_GEM_DIGGING
 MGDIGGING=MASTER_GEM_DIGGING
 MGEMDIGGING=MASTER_GEM_DIGGING
@@ -1188,6 +1186,22 @@ The precious stones found with this skill are best hunted for in mountains or ca
 Sand is best found in the desert. \
 You can also bundle multiple resources together using this skill.  The GET command \
 can be used to unbundle such resources.
+
+MHERB=MASTER_HERBOLOGY
+MHERBOLOGY=MASTER_HERBOLOGY
+MASTERHERB=MASTER_HERBOLOGY
+MASTERHERBOLOGY=MASTER_HERBOLOGY
+MASTER_HERBOLOGY=<ABILITY>\
+Usage    : MHERB [ITEM NAME]\n\r\
+Example  : mherb some herbs\n\r\
+Master Herbology is identical to Herbology, except that \
+it is able to identify every herb in a bundle, or in a large \
+group of herbs in the herbologists inventory.  Like Herbology, \
+the player may use this skill to identify herbs for the types that \
+they are.  This skill is quite necessary for Druids who wish to \
+use their Herbalism skill, or Cooks who need particular herbs \
+for recipes, but is fairly unnecessary for others. \
+The raw herbs for herbology are obtained by using the Foraging skill.
 
 MLEATHERWORK=MASTERLEATHERWORKING
 MASTER_LEATHER_WORKING=MASTERLEATHERWORKING
