@@ -109,3 +109,4 @@
 18 FoodPreserving MASK=+INT 12
 
 29 MasterHerbology MASK=+INT 12 REQUIRES=Herbology(100) 
+29 MasterFloristry MASK=+INT 12 REQUIRES=Floristry(100) 
