@@ -19,7 +19,7 @@
   18. New Spells: Conjure Ammunition, Harden Bullets, Light Blindness
   19. ZapperMask now supports +-ACCOUNTS and +-LOCATION
   20. New Prayer: Mass Forgive
-  21. New common skills: Legendary Weaponsmithing, Floristry
+  21. New common skills: Legendary Weaponsmithing, Floristry, Master Herbology
   22. Prop_LocationBound is more flexible with ABSOLUTE, PLAYEROK, and TIMEOUT arguments
   23. Scriptable commands QUESTMOB, QUESTOBJ, and QUESTSCRIPTED can now scan ALL quests
   24. ShapeShift forms 6-11 added, and shapeshift now governed by skills/shapeshift.txt
@@ -40,6 +40,7 @@
   38. New Properties: Prop_UseEmoter and Prop_UseEmoter2, for quick and easy item emoting.
   39. New Faction Change Event: SOCIAL -- for triggering faction change from socials
   40. Faction Change Events can now trigger gains of XP or RolePlay XP, and have a % chance
+  41. New common skills: Master Floristry
 # Build 5.9.6 Release 12/31/2017
    *. Sections in the default coffeemud.ini file were moved around.  Don't be alarmed. :)
    1. Hunger and Thirst system can now be tweeked.  See coffeemud.ini file
